jwt auth implemented.

--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@studio-freight/lenis": "^1.0.26",
     "axios": "^1.5.1",
+    "cookie-parser": "^1.4.6",
     "gsap": "^3.12.2",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
