Ticket work and email integration.

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,7 @@ MONGO_URI=mongodb+srv://devfest:gdgbbsr-devfest@devfest.gpvcsdk.mongodb.net/DevF
 PORT=5000
 
 TOKEN_KEY="xyz@dummy.com"
+
+Razor_key_id=''
+
+Razor_key_secret=''
