--- a/package.json
+++ b/package.json
@@ -11,21 +11,29 @@
   },
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@pdf-lib/fontkit": "^1.1.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@studio-freight/lenis": "^1.0.26",
     "axios": "^1.5.1",
     "cookie-parser": "^1.4.6",
     "gsap": "^3.12.2",
+    "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-multi-carousel": "^2.8.4",
+    "react-native-svg": "^13.14.0",
+    "react-qr-code": "^2.0.12",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9",
+    "react-to-pdf": "^1.0.1",
     "sass": "^1.66.1"
   },
   "devDependencies": {
