--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9",
     "react-to-pdf": "^1.0.1",
+    "react-vertical-timeline-component": "^3.6.0",
     "sass": "^1.66.1"
   },
   "devDependencies": {
