--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9",
+    "react-share": "^4.4.1",
     "react-to-pdf": "^1.0.1",
     "react-vertical-timeline-component": "^3.6.0",
     "sass": "^1.66.1"
